@@ -101,3 +101,4 @@ ENV/
 _version_save.py
 .pytest_cache
 
+docs/*.bib.bak
