@@ -1,0 +1,27 @@
+% Encoding: UTF-8
+
+@Article{Schuermann2017,
+  author    = {M. Schürmann and G. Cojoc and S. Girardo and E. Ulbricht and J. Guck and P. Müller},
+  title     = {Three-dimensional correlative single-cell imaging utilizing fluorescence and refractive index tomography},
+  journal   = {Journal of Biophotonics},
+  year      = {2017},
+  volume    = {11},
+  number    = {3},
+  pages     = {e201700145},
+  month     = {aug},
+  doi       = {10.1002/jbio.201700145},
+  publisher = {Wiley-Blackwell},
+}
+
+@Article{Mueller2018,
+  author  = {Müller, P. and Schürmann, M. and Girardo, S. and Cojoc, G. and Guck J.},
+  title   = {{Accurate evaluation of size and refractive index for spherical objects in quantitative phase imaging}},
+  journal = {Optics Express},
+  year    = {2018},
+  volume  = {26},
+  number  = {8},
+  pages   = {10729-10743},
+  doi     = {10.1364/OE.26.010729},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
