@@ -1,0 +1,6 @@
+=========
+Changelog
+=========
+List of changes in-between cellsino releases.
+
+.. include_changelog:: ../CHANGELOG
