@@ -1,0 +1,9 @@
+=============
+Code examples
+=============
+
+.. toctree::
+  :maxdepth: 2
+
+
+.. fancy_include:: simple_cell.py
